--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>request</module>
     <module>练习</module>
       <module>Session-Cookie</module>
+      <module>filter</module>
   </modules>
   <packaging>pom</packaging>
 
